<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".berlinView.LoginActivity">

    <EditText
        android:id="@+id/emailEdittext"
        android:layout_width="349dp"
        android:layout_height="65dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/passwordEdittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

    <EditText
        android:id="@+id/passwordEdittext"
        android:layout_width="349dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEdittext" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="154dp"
        android:layout_height="68dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="30dp"
        android:text="@string/login"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/emailEdittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notRegisteredTextView"
        android:layout_width="130dp"
        android:layout_height="18dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="101dp"
        android:text="@string/not_registered"
        android:textAlignment="center"
        android:textColor="#122A9F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="156dp"
        android:layout_height="51dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@+id/notRegisteredTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdittext" />

</androidx.constraintlayout.widget.ConstraintLayout>