<resources>
    <string name="app_name">BerlinStreets</string>

    <string name="title_activity_maps">Map</string>

    <string name="login">Login</string>

    <string name="firstname">Firstname</string>

    <string name="surename">Surename</string>

    <string name="email">Email</string>

    <string name="gender">Gender</string>

    <string name="password">Password</string>

    <string name="sign_in">Sign in</string>

    <string name="not_registered">Not registered ?</string>

    <string name="berlinstreets">BerlinStreets</string>

    <string name="map">Map</string>

    <string name="register">register</string>

    <string name="sharedPrefs">SHARED_PREFS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="bitte_melden_Sie_sich_an">Bitte melden Sie sich an.</string>
    <string name="logout">Logout</string>
    <string name="confirm">Confirm</string>
    <string name="titel">Titel</string>

    //String array

    <string-array name="markerTitles">
        <item>Unfall</item>
        <item>Blitzer</item>
        <item>Stau</item>
    </string-array>

    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Map</string>
    <string name="tab_text_2">My Markers</string>
    <string name="adresse">Adresse</string>
    <string name="title">Title</string>
    <string name="deleteButtonSymbol">delete</string>
</resources>